@@ -175,3 +175,4 @@ Revision	Log Message
 172		Prepare converter mod for first releaseable version
 173		Create and use CK2Building class
 174		Baronies no longer get wrong religion buildings
+175		Can set EU3 options via configuration.txt
